Added second display for previous caluclations

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <body>
         <div class='calculator'>
             <div class='display'>
+                <p class='display-history'>test</p>
                 <p class='display-text'>0</p>
             </div>
             <div class='controls'>
