--- a/index.html
+++ b/index.html
@@ -16,27 +16,33 @@
                     <button>7</button>
                     <button>8</button>
                     <button>9</button>
-                    <button>*</button>
+                    <button class='operator-btn'>*</button>
                 </div>
                 <div class='row'>
                     <button>6</button>
                     <button>5</button>
                     <button>4</button>
-                    <button>/</button>
+                    <button class='operator-btn'>/</button>
                 </div>
                 <div class='row'>
                     <button>3</button>
                     <button>2</button>
                     <button>1</button>
-                    <button>+</button>
+                    <button class='operator-btn'>+</button>
                 </div>
                 <div class='row'>
-                    <button>C</button>
                     <button>0</button>
-                    <button>=</button>
-                    <button>-</button>
-                    </div>
+                    <button>.</button>
+                    <button class='operator-btn'>=</button>
+                    <button class='operator-btn'>-</button>
+                </div>
+                <div class='row'>
+                    <button class='dbl-btn operator-btn'>Reset</button>
+                    <button class='dbl-btn operator-btn'>Delete</button>
+                    
+                </div>
             </div>
+
         </div>
     </body>
     <script src="scripts.js"></script>
