--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset='utf-8'>
-        <meta name="viewport" content="width=device-width, initial-scale=0.9">  
+        <meta name="viewport" content="width=80%, initial-scale=0.9">  
         <title>Calculator</title>
         <link rel='stylesheet' href='styles.css'>
     </head>
